Fix hibernate compatibility with java-17